Modify dropzones css: Correct spacing Text input Comments
With the last change to the CSS, https://github.com/friendica/friendica/pull/12932 was overwritten.

--- a/view/theme/frio/css/dropzone.frio.css
+++ b/view/theme/frio/css/dropzone.frio.css
@@ -206,7 +206,7 @@
 .dropzone {
 	min-height: 150px;
 	border: 1px solid rgba(0, 0, 0, 0.3);
-	padding: 2px 2px;
+	padding: 10px 10px;
 }
 .dropzone.dz-clickable {
 	cursor: pointer;
